[gd_scene load_steps=2 format=2]

[ext_resource path="res://Gameplay/UI/CharacterMenu/CharacterMenu.gd" type="Script" id=1]

[node name="CharacterMenu" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 151.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 144.0
margin_bottom = 68.0

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 14.0
text = "Name"
align = 1

[node name="MovementSpeed" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 144.0
margin_bottom = 32.0

[node name="AttributeName" type="Label" parent="MarginContainer/VBoxContainer/MovementSpeed"]
margin_right = 120.0
margin_bottom = 14.0
rect_min_size = Vector2( 120, 0 )
text = "Movement Speed"

[node name="AttributeValue" type="Label" parent="MarginContainer/VBoxContainer/MovementSpeed"]
margin_left = 124.0
margin_right = 144.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )
text = "0"
align = 2

[node name="Stamina" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 144.0
margin_bottom = 50.0

[node name="AttributeName" type="Label" parent="MarginContainer/VBoxContainer/Stamina"]
margin_right = 120.0
margin_bottom = 14.0
rect_min_size = Vector2( 120, 0 )
text = "Stamina"

[node name="AttributeValue" type="Label" parent="MarginContainer/VBoxContainer/Stamina"]
margin_left = 124.0
margin_right = 144.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )
text = "0"
align = 2

[node name="SpellPower" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 144.0
margin_bottom = 68.0

[node name="AttributeName" type="Label" parent="MarginContainer/VBoxContainer/SpellPower"]
margin_right = 120.0
margin_bottom = 14.0
rect_min_size = Vector2( 120, 0 )
text = "Spell Power"

[node name="AttributeValue" type="Label" parent="MarginContainer/VBoxContainer/SpellPower"]
margin_left = 124.0
margin_right = 144.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )
text = "0"
align = 2
